--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="statistic.css">
 
-    <title>Document</title>
+    <title>Primary Web</title>
   </head>
   <body >
     <!-- Topbar Start -->
